Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26662

Signal parameter type isn't enforced for dynamic connections

XMLWordPrintable

      With https://codereview.qt-project.org/#change,30598 applied to fix QTBUG-14550 signal parameter types are enforced for bound signal handlers, but not for dynamically connected handlers.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Unassigned Unassigned
            chriadam Christopher Adams (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:

                There are no open Gerrit changes